Manage ADFS CA trust in settings
